--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 
     <footer class="bgblue ftyellow alcenter">
         <p>Curso Bolos Caseiros da Vovó</p>
-        <p>contato@receitadebolodamarrara.com</p>
-        <p>WhatsApp: 51 99656-5445</p>
+        <p><a class="ftyellow" style="padding: 0; background: none; margin: auto; display: inline;" target="_blank" href="mailto:contato@receitadebolodamarrara.com">contato@receitadebolodamarrara.com</a></p>
+        <p>WhatsApp: <a class="ftyellow" style="padding: 0; background: none; margin: auto; display: inline;" target="_blank" href="https://api.whatsapp.com/send?phone=5551996565445&text=Oi%20tudo%20bem%20%3F">51 99656-5445</a></p>
         <p>Bolos de Sucesso® - Todos os Direitos Reservados</p>
     </footer>
   </body>
