--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         minha renda extra com a Confeitaria!
       </h3>
 
-      <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank" class="bold alcenter bgyellow ftblue">QUERO GANHAR DINEHIRO !</a>
+      <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank" class="bold alcenter bgyellow ftblue">QUERO GANHAR DINHEIRO !</a>
     </article>
 
     <article class="parte3 bgyellow ftblue">
@@ -148,7 +148,7 @@
         <img class="radius border borderyellow" src="Fotos/bolo  (4).jpg" />
       </section>
 
-      <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank" class="bold alcenter bgyellow ftblue">QUERO GANHAR DINEHIRO !</a>
+      <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank" class="bold alcenter bgyellow ftblue">QUERO GANHAR DINHEIRO !</a>
     </article>
 
     <article class="parte5 bgyellow ftblue">
@@ -178,7 +178,7 @@
       </article>
 
       <article>
-        <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank"  class="bold alcenter bgyellow ftblue">QUERO GANHAR DINEHIRO !</a>
+        <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank"  class="bold alcenter bgyellow ftblue">QUERO GANHAR DINHEIRO !</a>
       </article>
 
       <article>
@@ -201,7 +201,7 @@
       
         <img src="garantia.png" width="300px"/>
 
-        <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank" style="margin-top: 20px;" class="bold alcenter bgblue ftyellow">QUERO GANHAR DINEHIRO !</a>
+        <a href="https://go.hotmart.com/C16277156N?ap=5b80" target="_blank" style="margin-top: 20px;" class="bold alcenter bgblue ftyellow">QUERO GANHAR DINHEIRO !</a>
     </article>
     </section>
 
