--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
       /></noscript>
       <!-- End Facebook Pixel Code -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-152789758-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-152789758-1');
+</script>
+
+
   </head>
   <body>
     <article class="parte1 bgyellow ftblue">
